--- a/index.html
+++ b/index.html
@@ -1,1 +1,34 @@
-<html>Coming soin</html>
+<!DOCTYPE html>
+<html lang="fr-ca">
+<head>
+	<title>Domaine Noguès</title>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="title" property="og:title" content="Noguès">
+	<meta name="description" property="og:description" content="Noguès">
+	<meta property="og:type" content="website">
+	<meta property="og:url" content="https://famille.nogues.ca/">
+	<meta property="og:site_name" content="Famille Noguès">
+
+	<meta name="format-detection" content="telephone=no">
+	<meta name="format-detection" content="date=no">
+	<meta name="format-detection" content="address=no">
+	<meta name="format-detection" content="email=no">
+  <meta name="author" content="Lucien Noguès">
+	<meta name="robots" content="noindex, nofollow">
+	<meta name="mobile-web-app-capable" content="yes">
+	<meta name="apple-mobile-web-app-capable" content="yes">
+	<link rel="profile" href="https://gmpg.org/xfn/11">
+
+ 	<link rel="authorization_endpoint" href="https://indieauth.com/auth">
+	<link rel="token_endpoint" href="https://tokens.indieauth.com/token">
+ 	<link rel="profile" href="https://microformats.org/profile/hcard">
+  </head>
+  <body>
+	<section></section>
+	<section></section>
+	<section></section>
+  
+  </body>
+</html>
