--- a/index.html
+++ b/index.html
@@ -24,8 +24,14 @@
  	<link rel="authorization_endpoint" href="https://indieauth.com/auth">
 	<link rel="token_endpoint" href="https://tokens.indieauth.com/token">
  	<link rel="profile" href="https://microformats.org/profile/hcard">
-  </head>
-  <body>
+
+
+<style>
+img{position:fixed;top:50%;left:50%;transform:translate(-50%,-50%)}
+</style>
+</head>
+<body>
+<img src="ton-image.jpg">
 	<section></section>
 	<section></section>
 	<section></section>
