--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ img{position:fixed;top:50%;left:50%;transform:translate(-50%,-50%)}
 </style>
 </head>
 <body>
-<img src="ton-image.jpg">
+<img src="N.png">
 	<section></section>
 	<section></section>
 	<section></section>
