--- a/index.html
+++ b/index.html
@@ -27,7 +27,12 @@
 
 
 <style>
-img{position:fixed;top:50%;left:50%;transform:translate(-50%,-50%)}
+img {
+      position: fixed;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%); /* centre parfaitement */
+    }
 </style>
 </head>
 <body>
