--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
 <style>
 img {
       position: fixed;
+      max-width: 100vw;
+      max-height: 100vh;
       top: 50%;
       left: 50%;
       transform: translate(-50%, -50%); /* centre parfaitement */
